Share buttons on mobile, fixes #2

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -18,3 +18,17 @@
     }
   }
 }
+
+/* Social navbar override */
+
+div.navbar-header {
+  display: inline-block;
+}
+
+ul.navbar-nav {
+  display: inline-block;
+  float: right;
+  li {
+    float: left;
+  }
+}
